# aau2v

./: .gitignore  LICENSE  README.md  analyst.py  config.py  data.py  dataset.py  dataset_manager.py  doc2vec.py  example.ipynb  layer.py  main.py  model.py  models.py  pyproject.toml  tasks.py  toydata.py  train.py  train_model.ipynb  trainer.py  trainers.py  util.py
.github/workflows/: unittest.yml
aau2v/: config.py  dataset.py  dataset_center.py  layer.py  model.py  toydata.py  trainer.py
au2v/: analyst.py  config.py  dataset.py  dataset_center.py  dataset_manager.py  layer.py  model.py  toydata.py  train.py  trainer.py  util.py
example/: cluster_list.txt  doc2vec.py  vis.py
notebooks/: analyze_user_meta.ipynb  analyze_window_size.ipynb  create_gender_equal_ml.ipynb  create_testdata_ml.ipynb  create_toydata.ipynb  create_toydata_hard.ipynb  create_toydata_paper.ipynb  create_toydata_small.ipynb  eval_model.ipynb  eval_prediction.ipynb  example_weight_norm.ipynb  exp-4.ipynb  exp-5-1.ipynb  exp-5-2.ipynb  preprocess_20newsgroup.ipynb  preprocess_hm.ipynb  preprocess_hm_coldstart.ipynb  preprocess_ml.ipynb  result-2.json  result-paper.json  result.json  train_model.ipynb  visualize_loss.ipynb  visualize_meta_matrix.ipynb  visualize_meta_matrix_movielens.ipynb  visualize_meta_matrix_toydata.ipynb  visualize_ml_data.ipynb  visualize_ml_data_separate.ipynb  visualize_user_embedding_norm.ipynb  weight_norm.ipynb
src/: analyst.py  config.py  dataset.py  dataset_manager.py  model.py  preprocess_movielens.py  train.py  trainers.py  util.py
tests/: test_layer.py  test_train.py
